// Vitest Snapshot v1

exports[`<SampleCacheItem /> > should render when [missing=%p] false 1`] = `
<Styled(BoxGroupSection)>
  <CacheItemHeader>
    <i
      className="fas fa-archive fa-fw"
      style={
        {
          "fontSize": "24px",
        }
      }
    />
    <CacheItemLinkContainer>
      <CacheItemLink
        to="/samples/bar/files/foo"
      >
        abc123
      </CacheItemLink>
      <small>
        Created 
        <RelativeTime
          time="2018-01-01T00:00:00.000000Z"
        />
      </small>
    </CacheItemLinkContainer>
  </CacheItemHeader>
  <CacheItemRight>
    <div />
    <div>
      136.6MB
    </div>
  </CacheItemRight>
</Styled(BoxGroupSection)>
`;

exports[`<SampleCacheItem /> > should render when [missing=%p] true 1`] = `
<Styled(BoxGroupSection)>
  <CacheItemHeader>
    <i
      className="fas fa-archive fa-fw"
      style={
        {
          "fontSize": "24px",
        }
      }
    />
    <CacheItemLinkContainer>
      <CacheItemLink
        to="/samples/bar/files/foo"
      >
        abc123
      </CacheItemLink>
      <small>
        Created 
        <RelativeTime
          time="2018-01-01T00:00:00.000000Z"
        />
      </small>
    </CacheItemLinkContainer>
  </CacheItemHeader>
  <CacheItemRight>
    <div>
      <Badge
        color="red"
      >
        <Icon
          name="exclamation-circle"
        />
         Files Missing
      </Badge>
    </div>
    <div>
      136.6MB
    </div>
  </CacheItemRight>
</Styled(BoxGroupSection)>
`;
